--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
 org.gradle.jvmargs=-Xmx7G
 org.gradle.parallel=true
-
+baritone_version=1.20.4
 minecraft_version=1.20.4
 yarn_mappings=1.20.4+build.3
 loader_version=0.15.9
 
-mod_version=1.4
+mod_version=1.4++
 maven_group=thunder.hack
 archives_base_name=thunderhack
 
