--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,9 @@ dependencies {
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 	modCompileOnly  "meteordevelopment:baritone:${project.baritone_version}-SNAPSHOT"
 
+	modImplementation 'com.github.steveice10:mcprotocollib:1.12.2-2'
+	modImplementation 'com.github.steveice10:packetlib:master'
+
 	modImpl("org.ladysnake:satin:${project.satin_version}")
 
 	libImpl("meteordevelopment:orbit:${project.orbit_version}")
