backported most features from https://github.com/Pan4ur/ThunderHack-Recode/commit/6cbaf647e8d164b55afa3b1e079624822ab09e2b & everything from other commits (if something doesnt work - mne pohui )

--- a/build.gradle
+++ b/build.gradle
@@ -57,9 +57,9 @@ dependencies {
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 	modCompileOnly  "meteordevelopment:baritone:${project.baritone_version}-SNAPSHOT"
-
-	modImplementation 'com.github.steveice10:mcprotocollib:1.12.2-2'
-	modImplementation 'com.github.steveice10:packetlib:master'
+// idi nahui
+//	modImplementation 'com.github.steveice10:mcprotocollib:1.12.2-2'
+//	modImplementation 'com.github.steveice10:packetlib:master'
 
 	modImpl("org.ladysnake:satin:${project.satin_version}")
 
