--- a/build.gradle
+++ b/build.gradle
@@ -56,14 +56,13 @@ dependencies {
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	modCompileOnly  "meteordevelopment:baritone:${project.baritone_version}-SNAPSHOT"
-// idi nahui
-//	modImplementation 'com.github.steveice10:mcprotocollib:1.12.2-2'
-//	modImplementation 'com.github.steveice10:packetlib:master'
+
+
 
 	modImpl("org.ladysnake:satin:${project.satin_version}")
 
 	libImpl("meteordevelopment:orbit:${project.orbit_version}")
+	modCompileOnly "meteordevelopment:baritone:1.20.4-SNAPSHOT"
 
 	configurations.libImpl.dependencies.each {
 		implementation(it)
