--- a/build.gradle
+++ b/build.gradle
@@ -61,8 +61,8 @@ dependencies {
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
 	modApi "curse.maven:in-game-account-switcher-232676:4967040"
-
 	modImpl("org.ladysnake:satin:${project.satin_version}")
+	libImpl("io.netty:netty-handler-proxy:${project.netty_version}")
 
 	libImpl("meteordevelopment:orbit:${project.orbit_version}")
 	modCompileOnly "meteordevelopment:baritone:1.20.4-SNAPSHOT"
