--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ org.gradle.parallel=true
 minecraft_version=1.20.4
 yarn_mappings=1.20.4+build.3
 loader_version=0.15.9
+netty_version=4.1.90.Final
 
 mod_version=1.4++
 maven_group=thunder.hack
